# chs-deck

./: .gitignore  Cargo.toml  README.md  justfile  manifest.json  prompt-ideas.md  screenshot.js
.cargo/: config.toml
assets/: pi-media.html  pi-shell.html  pi-stats.html  pi-video.html
layers/: display.toml  nav.toml
profiles/: cinematic.toml  media.toml  weather.toml  work.toml
src/: main.rs
src/actions/: docker_count.rs  media.rs  mod.rs  shell.rs  stats.rs  video.rs  webtile.rs
