[package]
name = "chs-deck"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.20.2"
dashmap = "6"
log = "0.4"
openaction = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml  = { version = "0.8", features = ["parse"] }
toml_edit = "0.22"
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64        = "0.22"
futures-util  = "0.3"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
